--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@babel/cli": "^7.18.10",
     "@babel/core": "^7.19.1",
     "@babel/node": "^7.19.1",
+    "@babel/plugin-proposal-decorators": "^7.19.1",
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.3.0"
+    "eslint-config-next": "12.3.0",
+    "sass": "^1.55.0"
   }
 }
